# posix-next

./: .checkpatch.conf  .clang-format  .codecov.yml  .gitignore  README.md  blah.patch  west.yml
doc/: CMakeLists.txt  Makefile  conf.py  index.rst  posix.doxyfile.in  posix_groups.dox  posix_option_groups.map.yaml  zsock_stubs.dox
doc/_doxygen/: posix-next.css
doc/_intersphinx/: zephyr-4.3.0.objects.inv  zephyr-4.4.1.objects.inv
doc/_static/: aep-tabs.js  doxytooltip-patch.js  posix-next.css
doc/_templates/: breadcrumbs.html  layout.html
doc/extensions/posix_symbols/: __init__.py
doc/extensions/posix_symbols/static/: posix-symbols.css  posix-symbols.mjs
doc/extensions/zephyr_stubs/: __init__.py
doc/getting_started/: index.rst
doc/metrics/: coverage-posix.json  coverage-provenance.json  index.rst
doc/posix/: index.rst  symbols.rst
doc/posix/aep/: index.rst
doc/posix/conformance/: index.rst
doc/posix/implementation/: index.rst
doc/posix/kconfig/: index.rst
doc/posix/option_groups/: barriers.rst  c_lang_jump.rst  c_lang_math.rst  c_lang_support.rst  c_lang_support_r.rst  c_lib_ext.rst  clock_selection.rst  device_io.rst  fd_mgmt.rst  file_locking.rst  file_system.rst  file_system_r.rst  index.rst  mapped_files.rst  memory_protection.rst  multi_process.rst  networking.rst  non_portable.rst  pipe.rst  posix_threads_ext.rst  realtime_signals.rst  rw_locks.rst  semaphores.rst  signal_jump.rst  signals.rst  signals_ext.rst  single_process.rst  spin_locks.rst  subprofiling.rst  system_database.rst  system_database_r.rst  threads_base.rst  timers.rst  xsi_advanced_realtime.rst  xsi_advanced_realtime_threads.rst  xsi_realtime.rst  xsi_realtime_threads.rst  xsi_single_process.rst  xsi_system_logging.rst  xsi_threads_ext.rst
doc/posix/options/: asynchronous_io.rst  barriers.rst  clock_selection.rst  cputime.rst  fsync.rst  index.rst  ipv6.rst  mapped_files.rst  memlock.rst  memlock_range.rst  memory_protection.rst  message_passing.rst  monotonic_clock.rst  priority_scheduling.rst  raw_sockets.rst  realtime_signals.rst  semaphores.rst  shared_memory_objects.rst  spin_locks.rst  synchronized_io.rst  thread_attr_stackaddr.rst  thread_attr_stacksize.rst  thread_cputime.rst  thread_prio_inherit.rst  thread_prio_protect.rst  thread_priority_scheduling.rst  thread_safe_functions.rst  threads.rst  timeouts.rst  timers.rst  xopen_realtime.rst  xopen_realtime_threads.rst  xsi_streams.rst
doc/posix/overview/: index.rst
doc/scripts/: rename_posix_headers.py
lib/posix/options/: CMakeLists.txt  Kconfig  Kconfig.pipe  Kconfig.pthread  Kconfig.signal  aio.c  barrier.c  clock.c  cond.c  key.c  mutex.c  pipe.c  pipe_priv.h  posix_internal.h  posix_pool.c  pthread.c  rwlock.c  signal.c  spinlock.c  timer.c  z_sig_set.c
lib/posix/options/asynchronous_io/: CMakeLists.txt  aio.c
lib/posix/options/barriers/: CMakeLists.txt  Kconfig
lib/posix/options/clock_selection/: CMakeLists.txt  Kconfig
lib/posix/options/device_io/: CMakeLists.txt  Kconfig  close.c  device_io.c  fdopen.c  fileno.c  open.c  poll.c  pread.c  pselect.c  pwrite.c  read.c  select.c  write.c
lib/posix/options/fd_mgmt/: CMakeLists.txt  Kconfig  dup.c  dup2.c  fcntl.c  fd_mgmt.c  fseeko.c  ftello.c  ftruncate.c  lseek.c
lib/posix/options/file_locking/: CMakeLists.txt  Kconfig  file_locking.c
lib/posix/options/file_system/: CMakeLists.txt  fs.c
lib/posix/options/file_system_r/: CMakeLists.txt  Kconfig  file_system_r.c
lib/posix/options/fsync/: CMakeLists.txt  Kconfig  fsync.c
lib/posix/options/mapped_files/: CMakeLists.txt  Kconfig  mmap.c
lib/posix/options/memlock/: CMakeLists.txt  Kconfig
lib/posix/options/memlock_range/: CMakeLists.txt  Kconfig
lib/posix/options/memory_protection/: CMakeLists.txt  Kconfig
lib/posix/options/message_passing/: CMakeLists.txt  mqueue.c
lib/posix/options/multi_process/: CMakeLists.txt  Kconfig
lib/posix/options/networking/: CMakeLists.txt  Kconfig  accept.c  bind.c  connect.c  freeaddrinfo.c  gai_strerror.c  getaddrinfo.c  gethostname.c  getnameinfo.c  getpeername.c  getsockname.c  getsockopt.c  if_indextoname.c  if_nameindex.c  if_nametoindex.c  in6addr_alias.ld  inet_addr.c  inet_ntoa.c  inet_ntop.c  inet_pton.c  listen.c  net.c  netdb_ent.c  recv.c  recvfrom.c  recvmsg.c  send.c  sendmsg.c  sendto.c  setsockopt.c  shutdown.c  sockatmark.c  socket.c  socketpair.c  zsock_conversion.h
lib/posix/options/non_portable/: CMakeLists.txt  Kconfig  pthread_np.c
lib/posix/options/priority_scheduling/: CMakeLists.txt  Kconfig  sched.c
lib/posix/options/realtime_signals/: CMakeLists.txt  Kconfig  rtsig.c
lib/posix/options/rw_locks/: CMakeLists.txt  Kconfig
lib/posix/options/semaphores/: CMakeLists.txt  semaphore.c
lib/posix/options/shared/: CMakeLists.txt  posix_internal.h  pthread_priority.c  timeval_to_timespec.c  z_sig_set.c
lib/posix/options/shared_memory_objects/: CMakeLists.txt  Kconfig  shm.c
lib/posix/options/signals/: CMakeLists.txt  Kconfig  signal.c
lib/posix/options/signals_ext/: CMakeLists.txt  Kconfig  strsignal.c
lib/posix/options/single_process/: CMakeLists.txt  Kconfig  confstr.c  sysconf.c
lib/posix/options/spin_locks/: CMakeLists.txt  Kconfig
lib/posix/options/synchronized_io/: CMakeLists.txt  Kconfig  fdatasync.c
lib/posix/options/system_database/: CMakeLists.txt  Kconfig  system_database.c
lib/posix/options/system_database_r/: CMakeLists.txt  Kconfig  system_database_priv.c  system_database_priv.h  system_database_r.c
lib/posix/options/thread_priority_scheduling/: CMakeLists.txt  Kconfig  pthread_sched.c
lib/posix/options/threads_base/: CMakeLists.txt  Kconfig  cond.c  key.c  mutex.c  pthread.c  pthread_attr_stackaddr.c  pthread_attr_stacksize.c  pthread_mutex_prio.c
lib/posix/options/threads_ext/: CMakeLists.txt  Kconfig  (+2 more)
tests/posix/rw_locks/: CMakeLists.txt  Kconfig  testcase.yaml
tests/posix/signals/: CMakeLists.txt  prj.conf  testcase.yaml
tests/posix/threads_base/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/posix/timers/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
(+500 files in other folders)
