# SPDX-License-Identifier: Apache-2.0

set(POSIX_VERSION 200809L)
set(XOPEN_VERSION 700)
set(GEN_DIR ${ZEPHYR_BINARY_DIR}/include/generated)

if(CONFIG_POSIX_SYSTEM_INTERFACES)
  zephyr_compile_options("SHELL: $<$<COMPILE_LANGUAGE:C>:$<TARGET_PROPERTY:compiler,imacros> ${ZEPHYR_POSIX_NEXT_MODULE_DIR}/include/zephyr/posix/posix_features.h>")
  zephyr_compile_options("SHELL: $<$<COMPILE_LANGUAGE:CXX>:$<TARGET_PROPERTY:compiler,imacros> ${ZEPHYR_POSIX_NEXT_MODULE_DIR}/include/zephyr/posix/posix_features.h>")
endif()

zephyr_syscall_header_ifdef(CONFIG_POSIX_CLOCK_SELECTION ${CMAKE_CURRENT_SOURCE_DIR}/timers/posix_clock.h)
zephyr_syscall_header_ifdef(CONFIG_POSIX_TIMERS ${CMAKE_CURRENT_SOURCE_DIR}/timers/posix_clock.h)
zephyr_syscall_header_ifdef(CONFIG_XSI_SINGLE_PROCESS ${CMAKE_CURRENT_SOURCE_DIR}/timers/posix_clock.h)

# zephyr-keep-sorted-start
add_subdirectory(asynchronous_io)
add_subdirectory(barriers)
add_subdirectory(clock_selection)
add_subdirectory(device_io)
add_subdirectory(fd_mgmt)
add_subdirectory(file_system)
add_subdirectory(file_system_r)
add_subdirectory(fsync)
add_subdirectory(mapped_files)
add_subdirectory(memlock)
add_subdirectory(memlock_range)
add_subdirectory(memory_protection)
add_subdirectory(message_passing)
add_subdirectory(multi_process)
add_subdirectory(networking)
add_subdirectory(non_portable)
add_subdirectory(priority_scheduling)
add_subdirectory(rw_locks)
add_subdirectory(semaphores)
add_subdirectory(shared)
add_subdirectory(shared_memory_objects)
add_subdirectory(signals)
add_subdirectory(single_process)
add_subdirectory(spin_locks)
add_subdirectory(synchronized_io)
add_subdirectory(threads_base)
add_subdirectory(threads_ext)
add_subdirectory(timers)
add_subdirectory(xsi_advanced_realtime)
add_subdirectory(xsi_realtime)
add_subdirectory(xsi_single_process)
add_subdirectory(xsi_streams)
add_subdirectory(xsi_system_logging)
add_subdirectory(xsi_threads_ext)
# zephyr-keep-sorted-stop
