# SPDX-License-Identifier: Apache-2.0

set(POSIX_VERSION 200809L)
set(XOPEN_VERSION 700)
set(GEN_DIR ${ZEPHYR_BINARY_DIR}/include/generated)

if(CONFIG_POSIX_SYSTEM_INTERFACES)
  zephyr_compile_options("SHELL: $<$<COMPILE_LANGUAGE:C>:$<TARGET_PROPERTY:compiler,imacros> ${ZEPHYR_POSIX_NEXT_MODULE_DIR}/include/zephyr/posix/posix_features.h>")
  zephyr_compile_options("SHELL: $<$<COMPILE_LANGUAGE:CXX>:$<TARGET_PROPERTY:compiler,imacros> ${ZEPHYR_POSIX_NEXT_MODULE_DIR}/include/zephyr/posix/posix_features.h>")
endif()



add_subdirectory(shared)

# zephyr-keep-sorted-start
add_subdirectory_ifdef(CONFIG_POSIX_ASYNCHRONOUS_IO asynchronous_io)
add_subdirectory_ifdef(CONFIG_POSIX_BARRIERS barriers)
add_subdirectory_ifdef(CONFIG_POSIX_CLOCK_SELECTION clock_selection)
add_subdirectory_ifdef(CONFIG_POSIX_DEVICE_IO device_io)
add_subdirectory_ifdef(CONFIG_POSIX_FD_MGMT fd_mgmt)
add_subdirectory_ifdef(CONFIG_POSIX_FILE_LOCKING file_locking)
add_subdirectory_ifdef(CONFIG_POSIX_FILE_SYSTEM file_system)
add_subdirectory_ifdef(CONFIG_POSIX_FILE_SYSTEM_R file_system_r)
add_subdirectory_ifdef(CONFIG_POSIX_FSYNC fsync)
add_subdirectory_ifdef(CONFIG_POSIX_MAPPED_FILES mapped_files)
add_subdirectory_ifdef(CONFIG_POSIX_MEMLOCK memlock)
add_subdirectory_ifdef(CONFIG_POSIX_MEMLOCK_RANGE memlock_range)
add_subdirectory_ifdef(CONFIG_POSIX_MEMORY_PROTECTION memory_protection)
add_subdirectory_ifdef(CONFIG_POSIX_MESSAGE_PASSING message_passing)
add_subdirectory_ifdef(CONFIG_POSIX_MULTI_PROCESS multi_process)
add_subdirectory_ifdef(CONFIG_POSIX_NETWORKING networking)
add_subdirectory_ifdef(CONFIG_POSIX_NON_PORTABLE non_portable)
add_subdirectory_ifdef(CONFIG_POSIX_SIGNALS_EXT signals_ext)
add_subdirectory_ifdef(CONFIG_POSIX_PRIORITY_SCHEDULING priority_scheduling)
add_subdirectory_ifdef(CONFIG_POSIX_REALTIME_SIGNALS realtime_signals)
add_subdirectory_ifdef(CONFIG_POSIX_RW_LOCKS rw_locks)
add_subdirectory_ifdef(CONFIG_POSIX_SEMAPHORES semaphores)
add_subdirectory_ifdef(CONFIG_POSIX_SHARED_MEMORY_OBJECTS shared_memory_objects)
add_subdirectory_ifdef(CONFIG_POSIX_SIGNALS signals)
add_subdirectory_ifdef(CONFIG_POSIX_SINGLE_PROCESS single_process)
add_subdirectory_ifdef(CONFIG_POSIX_SPIN_LOCKS spin_locks)
add_subdirectory_ifdef(CONFIG_POSIX_SYNCHRONIZED_IO synchronized_io)
add_subdirectory_ifdef(CONFIG_POSIX_SYSTEM_DATABASE system_database)
add_subdirectory_ifdef(CONFIG_POSIX_SYSTEM_DATABASE_R system_database_r)
add_subdirectory_ifdef(CONFIG_POSIX_THREADS threads_base)
add_subdirectory_ifdef(CONFIG_POSIX_THREADS_EXT threads_ext)
add_subdirectory_ifdef(CONFIG_POSIX_TIMERS timers)
add_subdirectory_ifdef(CONFIG_XSI_ADVANCED_REALTIME xsi_advanced_realtime)
add_subdirectory_ifdef(CONFIG_XSI_REALTIME xsi_realtime)
add_subdirectory_ifdef(CONFIG_XSI_SINGLE_PROCESS xsi_single_process)
add_subdirectory_ifdef(CONFIG_XSI_STREAMS xsi_streams)
add_subdirectory_ifdef(CONFIG_XSI_SYSTEM_LOGGING xsi_system_logging)
add_subdirectory_ifdef(CONFIG_XSI_THREADS_EXT xsi_threads_ext)
# zephyr-keep-sorted-stop
